# TradingMind_moon-dev-ai-agents

./: .env.example  .gitignore  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt  setup.bat  start-backend.sh  start-frontend.sh  test.py
.claude/: CLAUDE.md
.claude/commands/: analyze.md  backtest.md  check-apis.md  debug-agent.md  risk-report.md
api/: main.py  requirements.txt  utils.py
backend/: default_config.py  logging_config.py
backend/agents/: __init__.py
backend/agents/analysts/: fundamentals_analyst.py  market_analyst.py  market_context_analyst.py  news_analyst.py  social_media_analyst.py
backend/agents/trader/: trader.py
backend/agents/utils/: agent_states.py  agent_utils.py  memory.py  (+6 more)
backend/analysis/: __init__.py  integrated_analyzer.py
backend/backtesting/: __init__.py  backtest_engine.py  metrics.py
backend/dataflows/: config.py  interface.py  y_finance.py
backend/graph/: __init__.py  conditional_logic.py  propagation.py  setup.py  trading_graph.py
backend/risk/: __init__.py  position_sizer.py
backend/utils/: __init__.py  cache.py  parallel.py  rate_limiter.py  retry.py
cli/: main.py  utils.py
examples/: enhanced_analysis_example.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.jsx  index.css
tradingagents/: default_config.py
tradingagents/analysis/: __init__.py  confidence_scorer.py  enhanced_output.py
tradingagents/dataflows/: reddit_utils.py  sec_edgar.py  y_finance.py
tradingagents/graph/: setup.py  trading_graph.py
tradingagents/risk/: risk_calculator.py
(+12 files in other folders)
