[project]
name = "tradingagents"
version = "0.1.0"
description = "Multi-Agent LLM Financial Trading Framework"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    # LLM providers
    "langchain-anthropic>=0.3.15",
    "langchain-openai>=0.3.23",
    "langchain-google-genai>=2.1.5",
    "langchain-deepseek>=0.1.0",
    "langchain-experimental>=0.3.4",
    "langgraph>=0.4.8",

    # Data sources
    "yfinance>=0.2.63",
    "finnhub-python>=2.4.23",
    "alpha-vantage>=3.0.0",

    # Data processing
    "pandas>=2.3.0",
    "stockstats>=0.6.5",

    # Memory & caching
    "chromadb>=1.0.12",
    "redis>=6.2.0",

    # Web scraping & news
    "feedparser>=6.0.11",
    "praw>=7.8.1",
    "parsel>=1.10.0",
    "requests>=2.32.4",

    # API server
    "fastapi>=0.115.0",
    "uvicorn>=0.32.0",
    "python-dotenv>=1.0.0",
    "websockets>=14.0",

    # CLI
    "rich>=14.0.0",
    "questionary>=2.1.0",
    "tqdm>=4.67.1",

    # Utilities
    "pytz>=2025.2",
    "typing-extensions>=4.14.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.8.0",
]

# Optional: Chinese market data
china = [
    "akshare>=1.16.98",
    "tushare>=1.4.21",
]
